--- a/templates/includes/event_widget.html
+++ b/templates/includes/event_widget.html
@@ -1,11 +1,14 @@
-<div class="row">
-    <div class="col-md-6">
-        <h3 > <a class="text-dark" href="{% url 'event_main_page' %}?type=event">Arrangementer</a> </h3>
-        {% include "includes/upcoming_events.html" with upcoming=upcoming_events class="c-event" %}
+<div class="card upcoming-events1 border border-success {{ margin|default:"mb-0" }}">
+    <div class="card-img-top pt-3 pb-1" style="background: #28a745;">
+        <h4 class="text-center"><a class="text-light " href="{% url 'event_main_page' %}?type=event">Arrangementer</a>
+        </h4>
     </div>
-
-    <div class="col-md-6"; style = "margin-top: 10px;">
-        <h3> <a class="text-dark" href="{% url 'event_main_page' %}?type=bedpres">Bedriftspresentasjoner</a> </h3>
-        {% include "includes/upcoming_events.html" with upcoming=upcoming_bedpreses class="c-bedpres"%}
+    {% include "includes/upcoming_events.html" with upcoming=upcoming_events class="c-event" border="border-success" %}
+</div>
+<div class="card upcoming-events2 border-warning {{ margin|default:"mb-0" }}">
+    <div class="card-img-top pt-3 pb-1" style="background: rgb(245, 181, 7);">
+        <h4 class="text-center"><a class="text-light" href="{% url 'event_main_page' %}?type=bedpres">Bedriftspresentasjoner</a>
+        </h4>
     </div>
+    {% include "includes/upcoming_events.html" with upcoming=upcoming_bedpreses class="c-bedpres" border="border-warning" %}
 </div>
